@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-02-01T01:04:00Z",
+  "timestamp" : "2025-02-02T01:03:30Z",
   "count_outdated" : 828,
   "uniques_outdated" : 438,
-  "count" : 829,
-  "uniques" : 439,
+  "count" : 830,
+  "uniques" : 440,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
